--- a/gnews/31.md
+++ b/gnews/31.md
@@ -1,37 +1,36 @@
 ---
-title: 疫苗灾难显现 加拿大萨省免费提供艾滋病毒自检工具包
+title: 拜登警告：俄罗斯撤军“未经证实”，入侵仍有可能
 ---
-`蓝莲花农场` [轉載自GNews](https://gnews.org/zh-hans/2022631/)
+`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2022705/)
 
-翻译：冰糖葫芦喵
+![President Joe Biden speaks about Russia and Ukraine in the East Room of the White House on Feb. 15, 2022. (Brendan Smialowski/AFP via Getty Images)](https://img.theepochtimes.com/assets/uploads/2022/02/15/Joe-Biden-4-700x420.jpg)乔·拜登总统于 2022 年 2 月 15 日在白宫东厅谈论俄罗斯和乌克兰。（Brendan Smialowski/AFP via Getty Images）
+来源于《大纪元时报》网站2022年02月15日的报道，尽管有报道称俄罗斯从乌克兰边境撤出了部分军队，但总统乔·拜登继续警告俄罗斯仍然可能入侵乌克兰。
+俄罗斯总统普京周二表示，他对与西方的安全谈判持开放态度，并且一些俄罗斯军队正在离开乌克兰附近的阵地。之后不久，拜登发表讲话称，俄罗斯入侵“仍然很有可能”。拜登补充说，虽然俄罗斯撤军“会是件好事”，但美国“尚未证实”有任何军队正在撤军。
+“事实上，我们的分析人士表示，他们仍然处于非常具有威胁性的位置。”拜登说，目前在乌克兰边境和白俄罗斯的俄罗斯驻军总数超过15万，比之前的说法有所增加。此前，俄罗斯国防部将其周二发布的坦克和装甲车移动的图像，描述为部队迁往“永久部署的地点”。
+俄罗斯否认其计划入侵，但要求西方停止乌克兰加入北约的申请。拜登周二重申了美国的立场，即与莫斯科的外交是最好的前进方向，称北约不会对俄罗斯构成威胁。“我们愿意采取切实可行的以结果为导向的步骤，以促进我们的共同安全。”拜登说，“不过，我们不会牺牲基本原则。”
+西方领导人坚持认为，各国应该有权享有领土完整和选择与谁交往的自由。拜登还重申，如果俄罗斯采取行动入侵乌克兰，美国及其盟国将实施严厉制裁，称“长期后果将损害俄罗斯在经济和战略上的竞争能力。”
+拜登再次敦促美国公民现在就离开乌克兰。美国周一宣布，外交人员将从基辅大使馆迁往西部城市利沃夫。拜登周二还再次表示，虽然美国不会派兵在乌克兰作战，但它将保卫北约领土。
 
-编辑与校对：冰糖葫芦喵、灭共文明
+五角大楼周一宣布，国防部长劳埃德·奥斯汀(Lloyd Austin)本周将前往欧洲访问北约东部盟国，与外国领导人会面并监督驻扎在该地区的部队。拜登政府于2月2日宣布了增加其在东欧的驻军计划。该部署包括前往德国和波兰的约2,000名士兵，以及从德国转移到罗马尼亚的1,000名骑兵部队。
+简评：
+俄罗斯总统普京说已经部分从乌克兰撤军，而拜登总统说还有15万部队驻扎在乌克兰和白俄罗斯边境。针对两个大国领导人的那么不一致说辞，做为普通民众的我们只会想：没有卫星吗？或者无人机在什么地方？
+而郭文贵先生在2月16日大直播上给新中国联邦的战友们解读的是：普京包括拜登等国际大佬们都在玩世界最高等的游戏——战争经济，喊打喊杀都能赚钱！
+国际大佬们的玩法已经超出普通民众的想象力，但战争经济只能让少部分人受益是不争的事实。而爆料革命的新中国联邦的战友们也有幸跟随郭文贵先生一起在风云突变的国际形势下，拥有财富，为进一步消灭中共政权奠定坚实的经济基础。
 
-加拿大国际广播电台（CBC）2月16日报道，**加拿大萨斯喀彻温省将免费提供艾滋病毒自检工具包，居民现在能够在家中自行检测人体免疫缺陷病毒(艾滋病毒)。**
+新闻链接：[https://www.theepochtimes.com/biden-russian-troop-withdrawal-not-verified-150000-still-threatening-ukraine\_4280378.html](https://www.theepochtimes.com/biden-russian-troop-withdrawal-not-verified-150000-still-threatening-ukraine_4280378.html)
 
-据报道，全省23个地点向公众免费提供艾滋病毒自检包。该省表示，检测试剂盒也可以在网上购买，并直接从商家送到居民的家中。
+翻译/简评：Brianchow PR：Harvey（叶知秋）
 
-根据该省周三发布的一份新闻稿，自检在一分钟内就能提供初步结果，只需要从一个人的**指尖取一点血就可以完成，其抗体测试的准确率为99.5%。**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/萨省HIV测试2-1.jpg)艾滋病自我检测工具（图片来源：路透社）
-在新闻发布会上，**该省表示:“当艾滋病病毒得到早期诊断和治疗时，人们可以活得更长、更健康。迅速知道自己是否感染了艾滋病病毒，也能让你采取预防措施，**防止病毒传播给他人。”
+* * *
 
-卫生部长保罗·梅里曼(Paul Merriman)在新闻稿中说:“我们已经看到了快速和容易获得家庭检测选项的明显好处。”
-![](https://assets.gnews.org/wp-content/uploads/2022/02/萨省HIV测试1.jpg)艾滋病自检测试工具包（图片来源：加拿大广播电台）
-该省表示，在自检试点项目的头几周内，覆盖率很高，向公众提供了70多套自检试剂盒。分发工作从1月份开始。
+- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
+- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
+- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
 
-**南萨斯喀彻温省艾滋病项目（APSS）的教育和信息专家雷迪（Vidya Reddy）表示，在过去，自检的费用相当昂贵，而APSS并不是总能获得自检。**
-![](https://assets.gnews.org/wp-content/uploads/2022/02/萨省HIV测试3-1.jpg)加拿大安省药房药剂师介绍提供免费HIV测试包（图片来源：加拿大媒体）
-雷迪还说：“知道你是阳性还是阴性的唯一方法就是去做检测。**因为艾滋病毒没有任何明显的症状。对每个人来说，接受检测是很重要的，**尤其是那些处于任何高风险接触中的人。
 
-**评论：**
+编辑：【英国伦敦喜庄园编辑部】
 
-**加拿大**政府开始推广全民接种疫苗已经将近一年的时间，截至目前，全国**已有80%的人完全接种了中共病毒疫苗，是接种率世界上最高国家之一。**
-
-爆料革命揭示的疫苗真相表明，今年5月份疫苗灾难将大规模爆发。届时，**接种过疫苗的人，自身的免疫力将会逐步完全丧失，疫苗接种者将会得各种奇怪的病，很多人会因为一个很不起眼的病而丧失生命。其症状类似于艾滋病。唯有那些没有注射疫苗的人，才是拯救人类的希望。**
-
-**新闻链接：**
-
-[Free HIV self-test kits now available to the public across Saskatchewan | CBC News](https://www.cbc.ca/news/canada/saskatchewan/free-hiv-self-test-kits-now-available-to-the-public-across-saskatchewan-1.6354026)
+![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
 
  
 
