--- a/gnews/32.md
+++ b/gnews/32.md
@@ -1,29 +1,38 @@
 ---
-title: 微信和全球速卖通被列入美国恶名市场名单
+title: 有声&#124;警察和抗议者同样渴望人权,自由
 ---
-`英國倫敦喜莊園 Himalaya London Club UK` [轉載自GNews](https://gnews.org/zh-hans/2022614/)
+`MOSREC` [轉載自GNews](https://gnews.org/zh-hans/2022686/)
 
-![](https://assets.gnews.org/wp-content/uploads/2022/02/Unknown-16.jpg)微信和全球速卖通被列入美国恶名市场名单 网络图片
-据美国之音2月18日报道，美国贸易代表办公室2月17日公布了2021年恶名市场假冒和盗版行为的审查结果。中共国的全球速卖通和微信被列入恶名市场名单。
+配音：香草山佛教部 – 李傻
+![This image has an empty alt attribute; its file name is Screen-Shot-2021-08-30-at-7.37.59-PM.png](https://assets.gnews.org/wp-content/uploads/2021/08/Screen-Shot-2021-08-30-at-7.37.59-PM.png)
+特鲁多宣布:国家紧急令之后。包括安大略省,魁北克省在内的省马上宣布:取消疫苗护照,逐步放开政策。但是这帮政客说:与自由卡车无关而是基于科学。
+![](https://assets.gnews.org/wp-content/uploads/2022/02/687-0-1.jpg)
+死要面子的元耻政客不承认取消疫苗护照是因为卡车司机的和平抗争让他们害怕了。
 
-所谓“恶名市场”指的是那些参与盗版和商标侵权行为或者为相关活动提供实质性便利的线上和线下交易平台。2021年恶名市场名单有42个线上平台和35个线下市场，包括拼多多、淘宝、以及其它九个设在中共国境内的实体市场，还有首次被列入的阿里巴巴旗下的全球速卖通和微信。
+暴君特鲁多想用国家紧急令吓退卡车司机彻底失败。
 
-以假乱真、以次充好，搅乱正常的市场秩序，恶意降低或者抬高价格等行为，都是中共国最擅长的手段。中共以假治国，没有科技，没有知识产权，只能用偷来的版权赢得短时间的暴利。中共体制的邪恶和假骗偷，使得中共国成为全世界的造假基地，这是以勤劳智慧而著称的中国人民最大的耻辱。只有推翻中共，中国人民才能够创建自己的品牌，洗刷掉中共带给中国人民的耻辱。
+在反对疫苗暴政。争取人权,自由的问题上连恐怖分子都不配合特鲁多政府。和平抗议是合法的。特鲁多找不到镇压的理由。警察也是人也渴望人权。自由。以他们与抗议者在国歌中互相拥抱这是信仰的力量。特鲁多将作为暴君载人史册这是他的遗产。
 
-新闻参考链接：[https://www.voachinese.com/a/ustr-releases-2021-review-of-notorious-markets-for-counterfeiting-and-piracy-20220217/6446272.html](https://www.voachinese.com/a/ustr-releases-2021-review-of-notorious-markets-for-counterfeiting-and-piracy-20220217/6446272.html)
+文贵先生早在香港反送中运动中就提倡香港抗我者使用卡车阻挡警察的阵压。这这倡议证明是非常有效的明智选择。
 
-* * *
+文字版原文：[警察和抗议者同样渴望人权,自由](https://gnews.org/zh-hans/2021534/)
 
-- [点击阅读英国伦敦喜庄园在G-News 的更多精彩文章](https://gnews.org/zh-hans/author/himalaya_hawk/)
-- [点击观看英国伦敦喜庄园在G-TV的精彩视频](https://gtv.org/web/#/UserInfo/5ee680a45bd6f123dd104807)
-- [欢迎加入【英国伦敦喜庄园】Discord官方群](https://discord.gg/VsNaHaMUsy)
+音频处理：Tom Li
+发稿：Tom Li
+![](https://assets.gnews.org/wp-content/uploads/2022/02/Feb-3-524x720-1.jpg)
+**更多资讯，更多关注**
 
+[**纽约香草山农场GTV-香草山之声**](https://gtv.org/user/5ffbdcd7f579a75e0bd123e6)
 
-编辑：【英国伦敦喜庄园编辑部】
+[**纽约香草山农场GTV-MOS TALK香草山访谈**](https://gtv.org/getter/601aeffdf5b9e26ca9d7ad10)
 
-![](https://assets.gnews.org/wp-content/uploads/2021/08/41bf97c0-3bb2-4a07-ad75-91b96dc3203c.jpg)
+[**纽约香草山农场 Gettr**](https://www.gettr.com/user/himalaya_mos)
 
+[**纽约香草山农场Twitter（中文）**](https://twitter.com/HIMALAYA_MOS)
 
+[**纽约香草山农场Twitter（英文）**](https://twitter.com/MosHimalaya)
+
+[**纽约香草山农场 YouTube**](https://www.youtube.com/channel/UCSLHrqs6Pil7V-_jOuZVVgg)
 
  
 
