--- a/gnews/35.md
+++ b/gnews/35.md
@@ -1,19 +1,27 @@
 ---
-title: 关注中国人权的NBA球星坎特透漏获得诺贝尔和平奖提名
+title: FBI组建专门负责加密货币的虚拟资产开发小组
 ---
-`首尔天池农场` [轉載自GNews](https://gnews.org/zh-hans/2022498/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2022635/)
 
-撰稿：追着曙光跑
+#### 撰稿：彩虹       
 
-2月17日，NBA球星坎特发推表示，能获得诺贝尔和平奖提名，他既感到荣幸又受宠若惊；他说，有时候表明立场比领到下一份薪资更重要。
-![](https://assets.gnews.org/wp-content/uploads/2022/02/WhatsApp-Image-2022-02-18-at-10.31.19.jpeg)图片来自坎特推特
-美媒指出，日前被NBA球队放弃的坎特，有30位诺贝尔奖得主联署力挺坎特，他也因此被提名诺贝尔和平奖。
+#### 责编：白夜
+![](https://assets.gnews.org/wp-content/uploads/2022/02/16451478481.png)
+图片来源：Decrypt
 
-坎特是塞尔蒂克前中锋，他是直言批评中共政府是反人类罪的残暴组织，是为中国人权发声的少数国际顶级运动员之一。
+《国会山报》2月17日报道，司法部周四宣布，FBI（联邦调查局）正在组建一个专门负责加密货币的新团队。
 
-此外，坎特曾在去年11月23日接受福克斯新闻采访时，敦促国际奥委会放弃2022年北京举行冬奥会。他说，即使大部分职业体育界都对中共侵犯人权、对中共领导层的指控保持沉默，但总得有人站出来与中共反抗。
+报道说，这个新的团队将与国家加密货币执法小组（National Cryptocurrency Enforcement Team）密切合作，检察官崔恩映（Eun Young Choi）将担任国家加密货币执法小组的第一任主任，他曾负责调查网络犯罪。
 
-信息来源：[I’m honored and humbled to received the nomination for the Nobel Peace Prize.](https://twitter.com/enesfreedom/status/1493986402077401090?s=21)
+在一份声明中，崔恩映说，“自数字货币诞生以来，该部门一直处于调查和起诉涉及数字货币犯罪的最前沿。NCET（国家加密货币执法小组）将发挥关键作用，确保随着围绕数字资产技术性增长和发展，该部门反过来加快和扩大其努力，以打击各类罪犯的非法滥用。我很高兴能领导NCET令人难以置信和有才华的律师团队，并开始为该部门的这一重要优先事项工作。”
+
+文章说，崔恩映周四开始全职工作。加密货币执法小组将专注于加密货币和数字资产的犯罪滥用所带来的挑战。该团队还将由整个部门的律师组成，包括具有加密货币、网络犯罪、洗钱和罚没背景的检察官。
+
+与之不同的是，FBI成立的这个负责加密货币的虚拟资产开发小组（Virtual Asset Exploitation Unit）新团队将由加密货币专家组成，为整个联邦调查局提供分析、支持和培训。该部门称，团队还将创新其加密货币工具，以预警未来威胁。
+
+**新闻来源**
+
+[FBI to form new cryptocurrency unit](https://thehill.com/policy/technology/594763-fbi-to-form-cryptocurrency-unit-doj-taps-enforcement-team-director?rl=1)
 
  
 
