--- a/gnews/43.md
+++ b/gnews/43.md
@@ -1,27 +1,25 @@
 ---
-title: 加拿大司法部长称将进行投票的紧急法应遵守权利和自由宪章
+title: 为开战俄罗斯可能栽赃乌克兰使用化学武器
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2021144/)
+`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2022345/)
 
-#### 编译：Cran
+翻译播报：billwilliam
 
-#### 责编：白夜
-![](https://assets.gnews.org/wp-content/uploads/2022/02/16451132611.png)[Image Source](https://candicebergen.ca/)
-加拿大，据2月16日CTV报道，临时保守党领袖坎迪斯·伯根(Candice Bergen) 表示，该党不会支持联邦政府提出有关实施紧急状态法的议案。她说，“当总理特鲁多（Trudeau）没有按照规定的步骤做而是直接跳到最终的紧急状态法”。在当地的执法机构正在试图解决封锁的问题时，为什么他要采取这种激烈的行动？
+校对：Ermat
+![](https://assets.gnews.org/wp-content/uploads/2022/02/unnamed-7.jpg)图源：shriworldnews.com
+《零对冲》报道，在今天（2月17日）纽约联合国安理会大会上，美国国务卿布林肯称有证据表明俄罗斯正走向立即入侵乌克兰。但他表示，他不想开始一场战争，而是要阻止战争。布林肯呼吁俄罗斯无条件宣布不要入侵乌克兰并且撤军。同时布林肯警告，俄罗斯可能栽赃乌克兰来制造开战的借口，甚至包括栽赃乌克兰使用化学武器。
 
-保守党议员玛丽莲·格拉杜（Marilyn Gladu）称此举是“权力争夺”。 她说，全国性的紧急状况没有发生，加拿大的安全没有受到威胁，但边境的和平抗议活动却被镇压。特鲁多总理没有利用现有的权力行事。他的所作所为是要夺取更多更据影响力的权力。”
+布林肯称，虽然俄罗斯一直嘲讽美国对于乌克兰战争的警告，俄罗斯15万大军陈兵乌克兰边境，并有能力进行大规模军事进攻。但是布林肯仍然在努力阻止战争爆发，他说，“如果俄罗斯没有入侵乌克兰，那我们会感到放松俄罗斯已经改变轨迹并证明我们的预测是错误的”。虽然俄罗斯自称已经撤回军队，但美国的信息清楚显示俄方的陆海空三军正在准备在未来几天内对乌克兰进行打击。布林肯强调，俄罗斯此刻不仅是乌克兰的威胁，也是全世界每个国家的威胁，因为两次世界大战和冷战后维护世界和平的基本原则正受到威胁—即一个国家不能以武力改变另一个国家的边界。布林肯同时也向俄罗斯的拉夫罗夫喊话，希望双方领导人展开峰会缓解局势，并在双方关注的安全问题方面达成理解。
 
-公共安全部长马尔科·门迪奇诺（Marco Mendicino ）于周三晚间在下议院提交了实施紧急状况法的动议。随后政府众议院领导人马克.荷兰（Mark Holland）在推特表示，他希望进行一场激烈的”辩论，然后进行议员投票。
+布林肯讲话中最令人震惊的部分是，他认为俄罗斯会通过栽赃乌克兰来制造开战的借口。比如制造在俄罗斯的暴力袭击事件，然后栽赃乌克兰，或者俄罗斯对乌克兰政府做出令人发指的指控。甚至俄罗斯制造的开战借口包括“虚假或真实的使用化学武器攻击”。
 
-作为议会根据《紧急状态法》行使权力的监督要求的一部分，政府必须在七个会议日内向众议院和参议院提交一项动议，概述联邦官员认为需要这些权力的原因，并详细说明将采取的具体措施，然后取得两个议会机构确认。
+布林肯解释称栽赃的借口“可以是编造的所谓俄罗斯境内发生恐怖炸弹袭击，编造出发现大型墓地，预先安排的无人机攻击平民，或者虚假或真实的使用化学武器攻击”。几周前，白宫发言人珍·普萨基（Jen Psaki）也表示俄罗斯已经在乌克兰东部边界部署进行栽赃行动的特工，这些特工受过城市战斗训练，并受训使用爆炸物对俄罗斯的代理人进行破坏攻击。
 
-如果该动议获得通过，紧急权力将继续有效，鉴于民进党已发出支持自由党的信号，预计该动议将可能继续有效。然而，它能否通过上议院还有待观察。
+同时，俄罗斯外交部矢口否认会入侵乌克兰。当然，因为战争尚未爆发，俄罗斯不一定真的进行栽赃行动。如果布林肯的预测成真，俄罗斯可能会对自己的阵地或城市进行恐怖袭击，然后栽赃乌克兰政府，借此理由开战。历史上的法西斯政权均擅长使用栽赃手法为开战找借口，所以还是要小心此类事件的发生。当然也要小心中共趁机攻打台湾，比如中共可以派间谍在台湾从事颠覆活动，假借台湾发生内乱或国民党与民进党之间发生暴力事件为由发动战争。栽赃诬陷的龌龊手法为我们敲响了警钟，中共更是全人类的威胁。
 
-周二深夜，特鲁多政府发布了更详细的规定，概述了通过该法案实施的权力。其中包括保护疫苗诊所、禁止儿童进入抗议和封锁场所、保护战争纪念馆，以及指导基本服务。
+新闻来源：
 
-司法部长戴维·拉梅蒂 （David Lametti）说，这些规定将于周四提交下议院。下议院和参议院都将进行辩论和投票，议会可以修改或撤销我们做出的任何命令。这是该法案中一个重要的民主制衡。他说 “至关重要的是，我们根据《紧急状态法》采取的所有行动都将遵守《权利和自由宪章》。这一要求已纳入立法本身”。
-
-[Source](https://www.ctvnews.ca/politics/conservatives-not-backing-emergencies-act-mps-to-debate-motion-thursday-1.5783799)
+[https://www.zerohedge.com/markets/blinken-lays-out-russian-false-flag-chemical-attack-claims-dramatic-un-security-council](https://www.zerohedge.com/markets/blinken-lays-out-russian-false-flag-chemical-attack-claims-dramatic-un-security-council)
 
  
 
