--- a/gnews/30.md
+++ b/gnews/30.md
@@ -1,28 +1,13 @@
 ---
-title: FBI组建专门负责加密货币的虚拟资产开发小组
+title: 2022年2月18日《樱花简报》：日本延长16个道府县的防疫重点措施
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2022635/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2022710/)
 
-#### 撰稿：彩虹       
+![](https://assets.gnews.org/wp-content/uploads/2022/02/20220218-scaled.jpg)
 
-#### 责编：白夜
-![](https://assets.gnews.org/wp-content/uploads/2022/02/16451478481.png)
-图片来源：Decrypt
-
-《国会山报》2月17日报道，司法部周四宣布，FBI（联邦调查局）正在组建一个专门负责加密货币的新团队。
-
-报道说，这个新的团队将与国家加密货币执法小组（National Cryptocurrency Enforcement Team）密切合作，检察官崔恩映（Eun Young Choi）将担任国家加密货币执法小组的第一任主任，他曾负责调查网络犯罪。
-
-在一份声明中，崔恩映说，“自数字货币诞生以来，该部门一直处于调查和起诉涉及数字货币犯罪的最前沿。NCET（国家加密货币执法小组）将发挥关键作用，确保随着围绕数字资产技术性增长和发展，该部门反过来加快和扩大其努力，以打击各类罪犯的非法滥用。我很高兴能领导NCET令人难以置信和有才华的律师团队，并开始为该部门的这一重要优先事项工作。”
-
-文章说，崔恩映周四开始全职工作。加密货币执法小组将专注于加密货币和数字资产的犯罪滥用所带来的挑战。该团队还将由整个部门的律师组成，包括具有加密货币、网络犯罪、洗钱和罚没背景的检察官。
-
-与之不同的是，FBI成立的这个负责加密货币的虚拟资产开发小组（Virtual Asset Exploitation Unit）新团队将由加密货币专家组成，为整个联邦调查局提供分析、支持和培训。该部门称，团队还将创新其加密货币工具，以预警未来威胁。
-
-**新闻来源**
-
-[FBI to form new cryptocurrency unit](https://thehill.com/policy/technology/594763-fbi-to-form-cryptocurrency-unit-doj-taps-enforcement-team-director?rl=1)
-
+*编辑：东京樱花团/简报小组
+发布：东京樱花团/老黑*
+![](https://assets.gnews.org/wp-content/uploads/2022/02/二维码.jpg)
  
 
 免责声明：本文内容仅代表作者个人观点，平台不承担任何法律风险。
