--- a/gnews/41.md
+++ b/gnews/41.md
@@ -1,25 +1,24 @@
 ---
-title: 为开战俄罗斯可能栽赃乌克兰使用化学武器
+title: 中共病毒疫情下的日元处于50年来的新低点
 ---
-`秘密翻譯組G-Translators` [轉載自GNews](https://gnews.org/zh-hans/2022345/)
+`東京櫻花団-Tokyo Sakura Group` [轉載自GNews](https://gnews.org/zh-hans/2022490/)
 
-翻译播报：billwilliam
+撰稿：东京樱花团｜盖特第一批注册
+![](https://assets.gnews.org/wp-content/uploads/2022/02/image-1675.png)[*图片来源*](https://www.jiji.com/jc/article?k=2022021701287&amp;g=eco&amp;p=20220217ax16S&amp;rel=pv)
+国际清算银行（BIS）在1月17日宣布，表明日元整体实力的实际有效汇率（2010=100）在1月份为67.55，是1972年6月以来近50年的最低水平。这个低值表明，由于日元持续贬值和价格低迷，日元的购买力正在下降。随着石油、面粉、大豆等进口的商品的价格高涨不落，强势日元的削弱也给家庭开支带来负担。
 
-校对：Ermat
-![](https://assets.gnews.org/wp-content/uploads/2022/02/unnamed-7.jpg)图源：shriworldnews.com
-《零对冲》报道，在今天（2月17日）纽约联合国安理会大会上，美国国务卿布林肯称有证据表明俄罗斯正走向立即入侵乌克兰。但他表示，他不想开始一场战争，而是要阻止战争。布林肯呼吁俄罗斯无条件宣布不要入侵乌克兰并且撤军。同时布林肯警告，俄罗斯可能栽赃乌克兰来制造开战的借口，甚至包括栽赃乌克兰使用化学武器。
+与显示日元对美元价值的双边汇率不同，实际有效汇率是衡量一种货币总体购买力的指标，它考虑到了主要国家的价格上涨率和贸易量等因素。 数值越高，从国外购买商品就越便宜。
 
-布林肯称，虽然俄罗斯一直嘲讽美国对于乌克兰战争的警告，俄罗斯15万大军陈兵乌克兰边境，并有能力进行大规模军事进攻。但是布林肯仍然在努力阻止战争爆发，他说，“如果俄罗斯没有入侵乌克兰，那我们会感到放松俄罗斯已经改变轨迹并证明我们的预测是错误的”。虽然俄罗斯自称已经撤回军队，但美国的信息清楚显示俄方的陆海空三军正在准备在未来几天内对乌克兰进行打击。布林肯强调，俄罗斯此刻不仅是乌克兰的威胁，也是全世界每个国家的威胁，因为两次世界大战和冷战后维护世界和平的基本原则正受到威胁—即一个国家不能以武力改变另一个国家的边界。布林肯同时也向俄罗斯的拉夫罗夫喊话，希望双方领导人展开峰会缓解局势，并在双方关注的安全问题方面达成理解。
+1995年4月，根据国际清算银行的数据，日元的实际有效汇率为150.85。在当时的政府和日本银行旨在削弱日元的政策背景下，它开始下降，降至现在不到其峰值的一半。
 
-布林肯讲话中最令人震惊的部分是，他认为俄罗斯会通过栽赃乌克兰来制造开战的借口。比如制造在俄罗斯的暴力袭击事件，然后栽赃乌克兰，或者俄罗斯对乌克兰政府做出令人发指的指控。甚至俄罗斯制造的开战借口包括“虚假或真实的使用化学武器攻击”。
+有分析家指出，日本的新冠对策不利，根本没有找到实质性的突破口，影响了日本的经济复苏。
 
-布林肯解释称栽赃的借口“可以是编造的所谓俄罗斯境内发生恐怖炸弹袭击，编造出发现大型墓地，预先安排的无人机攻击平民，或者虚假或真实的使用化学武器攻击”。几周前，白宫发言人珍·普萨基（Jen Psaki）也表示俄罗斯已经在乌克兰东部边界部署进行栽赃行动的特工，这些特工受过城市战斗训练，并受训使用爆炸物对俄罗斯的代理人进行破坏攻击。
+信息来源：[**円の実力、５０年ぶり低水準　購買力低下で景気悪影響も**](https://www.jiji.com/jc/article?k=2022021701287&amp;g=eco)
 
-同时，俄罗斯外交部矢口否认会入侵乌克兰。当然，因为战争尚未爆发，俄罗斯不一定真的进行栽赃行动。如果布林肯的预测成真，俄罗斯可能会对自己的阵地或城市进行恐怖袭击，然后栽赃乌克兰政府，借此理由开战。历史上的法西斯政权均擅长使用栽赃手法为开战找借口，所以还是要小心此类事件的发生。当然也要小心中共趁机攻打台湾，比如中共可以派间谍在台湾从事颠覆活动，假借台湾发生内乱或国民党与民进党之间发生暴力事件为由发动战争。栽赃诬陷的龌龊手法为我们敲响了警钟，中共更是全人类的威胁。
+*校对：东京樱花团/東洋武士*
+*发布：东京樱花团/tdownc2p*
+![](https://assets.gnews.org/wp-content/uploads/2021/12/yht.jpg)
 
-新闻来源：
-
-[https://www.zerohedge.com/markets/blinken-lays-out-russian-false-flag-chemical-attack-claims-dramatic-un-security-council](https://www.zerohedge.com/markets/blinken-lays-out-russian-false-flag-chemical-attack-claims-dramatic-un-security-council)
 
  
 
